<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.profile.ProfileFragment">


    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/_150dp"
        android:layout_height="@dimen/_150dp"
        android:layout_centerHorizontal="true"
        tools:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/WeatherTheme.MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile"
        android:padding="@dimen/_4dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_mobile"
        style="@style/WeatherTheme.MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name"
        android:padding="@dimen/_4dp"
        android:text="mobile" />

    <TextView
        android:id="@+id/tv_list"
        style="@style/WeatherTheme.MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_mobile"
        android:padding="@dimen/_4dp"
        android:text="@string/label_city_list" />

    <TextView
        android:id="@+id/tv_map"
        style="@style/WeatherTheme.MainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_list"
        android:padding="@dimen/_4dp"
        android:text="@string/label_city_map" />

    <RadioGroup
        android:id="@+id/rg_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_map"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/rb_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:checked="true"
            android:text="@string/label_metric" />

        <RadioButton
            android:id="@+id/rb_imperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/label_imperial" />

    </RadioGroup>
</RelativeLayout>